New API's for sorting
