# app/controllers/customer/getCustomer/get_OneCustProfile.ts
@@ -4,7 +4,7 @@ import Customer from "../../../models/customer/customer_model";
 import connection from "../../../configFiles/sequelize-postgres";
 
 const getCustomerProfile = (req: Request, res: Response) => {
-  const cust_id: number = req.body.id;
+  const customer_id: number = parseInt(req.body.id);
   /*client.query('Select id,first_name,last_name,email,phone_no,gender,dob,profile_img,created_at from neo_user where id=$1',[cust_id])
     .then(result=>{
         if(result){    
@@ -31,10 +31,10 @@ const getCustomerProfile = (req: Request, res: Response) => {
         ],
         exclude: ["password", "googleid", "facebookid"]
       },
-      where: { customer_id: cust_id }
+      where: { customer_id: customer_id }
     })
       .then((result: any) => {
-        if (result) {
+        if (result.length!==0) {
           res.status(200).json({ success: true, customer_proile: result });
         } else
           res.status(404).json({ success: false, message: "No data found" });
